Project cards now overflow the page correctly with a scrollbar | Change style colors of project cards, main background, and nav

--- a/src/styles/mainContent.css
+++ b/src/styles/mainContent.css
@@ -10,13 +10,16 @@
     display: grid;
     grid-template: 1fr / 3fr 1fr 1fr;
 
-    background-color: lightblue;
-    padding: 16px;
-
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px 2px lightgray;
+    
+    
     height: 30%;
     width: 87%;
+    padding: 16px;
     
-    border: 1px solid black;
+    border-radius: 12px;
+    border: none;
 }
 
 
@@ -35,4 +38,5 @@
     margin: 0;
 
     border: 1px solid black;
+    margin: 0px 6px;
 }
