--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -9,7 +9,7 @@ nav {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 
-    background-color: #cbbcf6;
+    background-color: #dcb5ff;
 }
 
 h2:hover {
