--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,12 +23,12 @@ nav {
 
 main {
     display: grid;
-    grid-template: repeat(8, 1fr) / 1fr;
+    grid-template: repeat(8, minmax(100px, 1fr)) / 1fr;
+    grid-auto-rows: minmax(100px, 1fr);
 
     grid-column: 2 / 3;
 
-    background-color: #ddeedf;
+    background-color: #fcfefe;
 
-    max-height: 100vh;
     overflow: auto;
 }
